--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -128,9 +128,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -160,9 +160,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -190,9 +190,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -220,9 +220,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -251,9 +251,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
     {{ else }}
@@ -286,9 +286,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -325,9 +325,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -355,9 +355,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -374,9 +374,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/overview/">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/detail/">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
