--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -5,11 +5,11 @@
   </label>
   <input type="checkbox" id="show-menu" role="button">
   <ul class="sidebar-nav">
-    <li id="milestone"><a href="{{ .Site.BaseURL }}milestone/">Milestones</a></li>
-    <li id="continuous"><a href="{{ .Site.BaseURL }}continuous/">Continuous</a></li>
-    <li id="misc"><a href="{{ .Site.BaseURL }}misc/">Misc</a></li>
-    <li id="workbench"><a href="{{ .Site.BaseURL }}workbench/">Workbench</a></li>
-    <li id="infra"><a href="{{ .Site.BaseURL }}infra/">Infrastructure</a></li>
-    <li id="scenarios"><a href="{{ .Site.BaseURL }}scenarios/">Scenarios</a></li>
+    <li id="milestone"><a href="{{ .Site.BaseURL }}milestone/index.html">Milestones</a></li>
+    <li id="continuous"><a href="{{ .Site.BaseURL }}continuous/index.html">Continuous</a></li>
+    <li id="misc"><a href="{{ .Site.BaseURL }}misc/index.html">Misc</a></li>
+    <li id="workbench"><a href="{{ .Site.BaseURL }}workbench/index.html">Workbench</a></li>
+    <li id="infra"><a href="{{ .Site.BaseURL }}infra/index.html">Infrastructure</a></li>
+    <li id="scenarios"><a href="{{ .Site.BaseURL }}scenarios/index.html">Scenarios</a></li>
   </ul>
 </div>
