--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,13 +4,13 @@
 
 <div class="content container fullspace home">
   <div class="dark-bloc">
-    <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/">continuous integration updates</a>.</p>
+    <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/index.html">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/index.html">continuous integration updates</a>.</p>
     <div class="flex-ctn">
      <div class="flex-itm">
-        <a class="button" href="{{ .Site.BaseURL }}milestone/" alt="blank">Milestones Benchmarks</a>
+        <a class="button" href="{{ .Site.BaseURL }}milestone/index.html" alt="blank">Milestones Benchmarks</a>
       </div>
       <div class="flex-itm">
-        <a class="button" href="{{ .Site.BaseURL }}continuous/" alt="blank">Continuous Integration Benchmarks</a>
+        <a class="button" href="{{ .Site.BaseURL }}continuous/index.html" alt="blank">Continuous Integration Benchmarks</a>
       </div>
     </div>
   </div>
