--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -123,7 +123,7 @@
       <dd class="times">{{ (index .Site.Data.bench $data).import_duration }}</dd>
       <dt>Duration sync</dt>
       <dd class="timems">{{ (index .Site.Data.bench $data).import_massimportwiththreads_avg }}</dd>
-      <dt>Residual Residual duration async</dt>
+      <dt>Residual duration async</dt>
       <dd class="timems">{{ (index .Site.Data.bench $data).import_waitforasyncjobs_avg }}</dd>
       <dt>Reports</dt>
       <dd>
