Add benchmark result for 1b

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,6 +9,7 @@
     <li id="continuous"><a href="{{ .Site.BaseURL }}continuous/index.html">Continuous</a></li>
     <li id="misc"><a href="{{ .Site.BaseURL }}misc/index.html">Misc</a></li>
     <li id="workbench"><a href="{{ .Site.BaseURL }}workbench/index.html">Workbench</a></li>
+    <li id="custom"><a href="{{ .Site.BaseURL }}custom/index.html">Custom</a></li>
     <li id="infra"><a href="{{ .Site.BaseURL }}infra/index.html">Infrastructure</a></li>
     <li id="scenarios"><a href="{{ .Site.BaseURL }}scenarios/index.html">Scenarios</a></li>
   </ul>
