--- a/layouts/custom/single.html
+++ b/layouts/custom/single.html
@@ -126,9 +126,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim10massimport/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim10massimport/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim10massimport/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim10massimport/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -158,9 +158,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim20createdocuments/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim20createdocuments/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -188,9 +188,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30navigation/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigation/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30navigation/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigation/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -218,9 +218,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30navigationjsf/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigationjsf/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -249,9 +249,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30search/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30search/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30search/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30search/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
     {{ else }}
@@ -284,9 +284,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim30updatedocuments/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30updatedocuments/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -323,9 +323,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim50crud/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50crud/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim50crud/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50crud/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -353,9 +353,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim50bench/overview/index.html">» Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50bench/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://s3-eu-west-1.amazonaws.com/nuxeo-b10b-results/{{$datapath}}/gatling1/sim50bench/detail/index.html">» Gatling report</a>
+          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50bench/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
