Add CTA on homepage for restricted content access

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,10 +7,7 @@
     <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/index.html">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/index.html">continuous integration updates</a>.</p>
     <div class="flex-ctn">
      <div class="flex-itm">
-        <a class="button" href="{{ .Site.BaseURL }}milestone/index.html" alt="blank">Milestones Benchmarks</a>
-      </div>
-      <div class="flex-itm">
-        <a class="button" href="{{ .Site.BaseURL }}continuous/index.html" alt="blank">Continuous Integration Benchmarks</a>
+        <a class="button" href="//www.nuxeo.com/about/contact/" alt="blank">Contact Us to get the password</a>
       </div>
     </div>
   </div>
