Restricted access: fix typo on 401 and update CTA style

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,12 @@
 <div class="content container fullspace home">
   <div class="dark-bloc">
     <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/index.html">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/index.html">continuous integration updates</a>.</p>
-    <div class="flex-ctn">
+    <div class="flex-ctn align-baseline">
+    <div class="flex-itm">
+       <p>This website is protected.</p>
+     </div>
      <div class="flex-itm">
-        <a class="button" href="//www.nuxeo.com/about/contact/" alt="blank">Contact Us to get the password</a>
+        <a class="button" href="//www.nuxeo.com/about/contact/" alt="blank">Contact Us to get access</a>
       </div>
     </div>
   </div>
