--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -684,6 +684,10 @@ th div,
   align-items: flex-start;
 }
 
+.flex-ctn.align-baseline {
+  align-items: baseline;
+}
+
 .flex-ctn h1 {
   display: block;
   text-align: center;
