Use Standard Header and Footer from website-styles repo

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,13 @@
-<header>
-  <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/nuxeo.png"></a>
-  <span>{{ .Site.Params.description }}</span>
-  {{ partial "sidebar.html" . }}
-</header>
+<nuxeo-header show-nuxeo-menu>
+  <!-- <nuxeo-banner background-id="1" title="New Title">Lorem ipsum dolor sit amet, cu facer noster mea. Doming iracundia voluptatum in his. Vel an impetus democritum. Te quo sapientem iracundia. Ubique nostrud dolorum ut est.
+  </nuxeo-banner> -->
+  <nuxeo-menu site-name="{{ .Site.Params.description }}" site-url="{{ .Site.BaseURL }}" menu-items='[
+  {"title": "Milestones", "url": "{{ .Site.BaseURL }}milestone/index.html", "pathname": "/milestone/"},
+  {"title": "Continuous", "url": "{{ .Site.BaseURL }}continuous/index.html", "pathname": "/continuous/"},
+  {"title": "Misc", "url": "{{ .Site.BaseURL }}misc/index.html", "pathname": "/misc/"},
+  {"title": "Workbench", "url": "{{ .Site.BaseURL }}workbench/index.html", "pathname": "/workbench/"},
+  {"title": "Custom", "url": "{{ .Site.BaseURL }}custom/index.html", "pathname": "/custom/"}]' menu-items-right='[
+  {"title": "Infrastructure", "url": "{{ .Site.BaseURL }}infra/index.html", "pathname": "/infra/"},
+  {"title": "Scenarios", "url": "{{ .Site.BaseURL }}scenarios/index.html", "pathname": "/scenarios/"}]'>
+  </nuxeo-menu>
+</nuxeo-header>
