--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -5,6 +5,10 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   {{ .Hugo.Generator }}
 
+  <!-- Standard Nuxeo header and footer -->
+  <script src="https://www.nuxeo.com/assets/js/webcomponents-lite.min.js"></script>
+  <link rel="import" href="https://www.nuxeo.com/assets/elements.build.html" />
+
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
