Update homepage content

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -579,7 +579,14 @@ th div,
   font-weight: 200;
   color: #fff;
   line-height: 1.8em;
-  font-size: 1.15rem;
+  font-size: 1.1rem;
+}
+
+.dark-bloc h1 {
+  color: #fff;
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .dark-bloc a {
