--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 
 <div class="content container fullspace home">
   <div class="dark-bloc">
-    <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/index.html">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/index.html">continuous integration updates</a>.</p>
+    <h1>Performance Benchmarks</h1>
     <div class="flex-ctn align-baseline">
     <div class="flex-itm">
        <p>This website is protected.</p>
@@ -16,35 +16,21 @@
   </div>
 
   <div class="flex-ctn">
-    <h1>Notable benchmark numbers for reference</h1>
-    <div class="flex-itm">
-      <div class="box-title">
-        <img src="{{ .Site.BaseURL }}images/certified.png" />
-        <span class="number">1 Billion Docs</span>
-      </div>
-      <div class="detail">Current benchmark for the number of documents stored in the Nuxeo Platform. Next step: 10 billion!</div>
-      <a class="button" href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read the Blog Post</a>
-    </div>
-    <div class="flex-itm">
-      <div class="box-title">
-        <img src="{{ .Site.BaseURL }}images/chrono.png" />
-        <span class="number">6,000 reqs/sec</span>
-      </div>
-      <div class="detail">A JavaScript front-end application can send 6,000 requests per second to a Nuxeo Platform server.</div>
-      <a class="button" href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read the Blog Post</a>
-    </div>
-    <div class="flex-itm">
-      <div class="box-title">
-        <img src="{{ .Site.BaseURL }}images/prize.png" />
-        <span class="number">14,000 docs/sec</span>
-      </div>
-      <div class="detail">Import speed when using a MongoDB backend. Perfect for projects with huge batches of data to import.</div>
-      <a class="button" href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read the Blog Post</a>
-    </div>
+    <p>
+      We have the benchmark results to prove that Nuxeo provides greater performance and scalability as an enterprise content management platform.
+   Designed to provide “future-proof” flexibility, the Nuxeo Platform offers key implementation options to stay ahead of fast-changing requirements:
+ </p>
+   <ul>
+     <li>Choose SQL or NoSQL (e.g. <a href="https://www.nuxeo.com/integration/mongodb/">MongoDB</a>) database for storage</li>
+     <li>Configure search using SQL-based queries, <a href="https://www.nuxeo.com/integration/elasticsearch/">Elasticsearch</a>, or combination of both</li>
+     <li>Partition data and scale the Elasticsearch engine independently for massive scalability</li>
+     <li>Shard on several databases for even higher throughput</li>
+   </ul>
+    <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/index.html">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/index.html">continuous integration updates</a>.</p>
   </div>
 
   <div class="dark-bloc">
-    <p>Designed by developers for developers, the Nuxeo Platform is a highly customizable and extensible content management platform for building business applications.</p>
+    <p>Nuxeo provides a Hyperscale Digital Asset Platform that helps enterprise organizations unlock the full value of their digital assets to grow revenue, improve performance, and maximize investments. Leading organizations use Nuxeo for digital asset management, document management, knowledge management, and other content-centric business applications.</p>
     <div class="align-c">
       <a class="button" href="http://www.nuxeo.com/products/content-management-platform/" target="blank">Discover Nuxeo Platform</a>
     </div>
