Remove outdated code for restricted access

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -761,20 +761,12 @@ th div,
   background-color: #457430;
 }
 
-.row.oracle12c {
-  display: none;
-}
-
-.row.mssql {
-  display: none;
-}
-
-.row._oracle12c .tag,
+.row.oracle12c .tag,
 .Xoracle12c.tag {
   background-color: #11666b;
 }
 
-.row._mssql .tag,
+.row.mssql .tag,
 .Xmssql.tag {
   background-color: #673a79;
 }
