Display latest "Benchmark" tagged blog posts on homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,17 +15,17 @@
     </div>
   </div>
 
-  <div class="flex-ctn">
+  <div class="flex-ctn blog-section">
     <p>
       We have the benchmark results to prove that Nuxeo provides greater performance and scalability as an enterprise content management platform.
-   Designed to provide “future-proof” flexibility, the Nuxeo Platform offers key implementation options to stay ahead of fast-changing requirements:
- </p>
-   <ul>
-     <li>Choose SQL or NoSQL (e.g. <a href="https://www.nuxeo.com/integration/mongodb/">MongoDB</a>) database for storage</li>
-     <li>Configure search using SQL-based queries, <a href="https://www.nuxeo.com/integration/elasticsearch/">Elasticsearch</a>, or combination of both</li>
-     <li>Partition data and scale the Elasticsearch engine independently for massive scalability</li>
-     <li>Shard on several databases for even higher throughput</li>
-   </ul>
+      Designed to provide “future-proof” flexibility, the Nuxeo Platform offers key implementation options to stay ahead of fast-changing requirements:
+    </p>
+    <ul>
+      <li>Choose SQL or NoSQL (e.g. <a href="https://www.nuxeo.com/integration/mongodb/">MongoDB</a>) database for storage</li>
+      <li>Configure search using SQL-based queries, <a href="https://www.nuxeo.com/integration/elasticsearch/">Elasticsearch</a>, or combination of both</li>
+      <li>Partition data and scale the Elasticsearch engine independently for massive scalability</li>
+      <li>Shard on several databases for even higher throughput</li>
+    </ul>
     <p>From thousands to billion documents repositories, check out the Nuxeo Platform <a href="{{ .Site.BaseURL }}milestone/index.html">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/index.html">continuous integration updates</a>.</p>
   </div>
 
